@@ -1,6 +1,7 @@
 * 2014-02-24 - thorben.betten@open-xchange.com
 
  - Fix for bug 31264: Added cache invalidator to capabilities caches
+ - Fix for bug 30969: Fully leverage from folder cache within folder layer, do not use a custom one in IMAP bundle
 
 * 2014-02-24 - marcus.klein@open-xchange.com
 
